Fixed bug with search(text typing) on mobile

--- a/less/main.less
+++ b/less/main.less
@@ -43,7 +43,7 @@
 		color: #7F8082;
 	}*/
 
-	* { .user-select(none);	}
+	*:not(input) { .user-select(none);	}
 
 	.mobile-disabled-alarm {
 		display: none;
